--- a/index.html
+++ b/index.html
@@ -1,7 +1,36 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
-        <title>
-            
-        </title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, intitial-scale-1.0">
+        <title>Login page</title>
+        <link rel="stylesheet" href="main css.css">
+        <link rel="stylesheet" href="Java.js">
     </head>
+    <body>
+        <div class="wrapper">
+            <header>Login</header>
+            <form action="#">
+                <div class="field email">
+                    <div class="input-area">
+                      <input type="text" placeholder="Email Address">
+                      <i class="icon fas fa-envelope"></i>
+                      <i class="error error-icon fas fa-exclamation-circle"></i>
+                    </div>
+                    <div class="error error-txt">Email needed</div>
+                  </div>
+                  <div class="field password">
+                    <div class="input-area">
+                      <input type="password" placeholder="Password">
+                      <i class="icon fas fa-lock"></i>
+                      <i class="error error-icon fas fa-exclamation-circle"></i>
+                    </div>
+                    <div class="error error-txt">Password needed</div>
+                  </div>
+                  <div class="pass-txt"><a href="#">Forgot password?</a></div>
+                  <input type="submit" value="Login">
+            </form>
+            <div class="sign-txt">Not yet member? <a href="signup page.html">Signup now</a></div>
+        </div>
+    </body>
 </html>
