--- a/index.html
+++ b/index.html
@@ -13,19 +13,13 @@
             <form action="#">
                 <div class="field email">
                     <div class="input-area">
-                      <input type="text" placeholder="Email Address">
-                      <i class="icon fas fa-envelope"></i>
-                      <i class="error error-icon fas fa-exclamation-circle"></i>
-                    </div>
-                    <div class="error error-txt">Email needed</div>
+                      <input class="emailjs" type="text" placeholder="Email Address" required>
+                      </div>
                   </div>
                   <div class="field password">
                     <div class="input-area">
-                      <input type="password" placeholder="Password">
-                      <i class="icon fas fa-lock"></i>
-                      <i class="error error-icon fas fa-exclamation-circle"></i>
+                      <input class="passwordjs" type="password" placeholder="Password" required>
                     </div>
-                    <div class="error error-txt">Password needed</div>
                   </div>
                   <div class="pass-txt"><a href="#">Forgot password?</a></div>
                   <input type="submit" value="Login">
